@@ -1,0 +1,5 @@
+## Use &copy; for copyright
+
+## When to use &#124; in tables
+
+## **All In!**
